--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,6 +38,10 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name=".EditTextActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name=".PickPhotoActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Transparent" >
