--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,6 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     
-    
     <application
         android:allowBackup="true"
         android:name=".UglyPicApp"
@@ -56,10 +55,18 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name=".PublishActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name=".PickPhotoActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Transparent" >
         </activity>
+        <activity 
+            android:name=".ImageCropActivity"
+            android:screenOrientation="portrait"
+			android:theme="@style/Transparent"></activity>
     </application>
 
 </manifest>
