完成拼图以及基本的分享ui

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -65,8 +65,7 @@
         </activity>
         <activity 
             android:name=".ImageCropActivity"
-            android:screenOrientation="portrait"
-			android:theme="@style/Transparent"></activity>
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
