--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,25 +7,32 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
-    
 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.FLASHLIGHT"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
     <application
+        android:name="com.canruoxingchen.uglypic.UglyPicApp"
         android:allowBackup="true"
-        android:name=".UglyPicApp"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-       <!--  <activity
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="5232efc956240bb382026313" >
+        </meta-data>
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="DEFAULT" />
+        <!--
+        <activity
             android:name="com.canruoxingchen.uglypic.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
@@ -34,11 +41,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>  -->
+        </activity>
+        -->
         <activity
-            android:name="com.canruoxingchen.uglypic.CameraActivity"
-            android:label="@string/app_name"
+            android:name="com.canruoxingchen.uglypic.SplashActivity"
             android:hardwareAccelerated="true"
+            android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,25 +55,52 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PhotoEditor"
+            android:name="com.canruoxingchen.uglypic.CameraActivity"
+            android:hardwareAccelerated="true"
+            android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".EditTextActivity"
+            android:name="com.canruoxingchen.uglypic.PhotoEditor"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".PublishActivity"
+            android:name="com.canruoxingchen.uglypic.PublishActivity"
             android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity
-            android:name=".PickPhotoActivity"
+            android:name="com.canruoxingchen.uglypic.PickPhotoActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Transparent" >
         </activity>
-        <activity 
-            android:name=".ImageCropActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name="com.canruoxingchen.uglypic.ImageCropActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+         <activity
+            android:name="com.canruoxingchen.uglypic.ViewUglyPicActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+
+        <service
+            android:name="com.umeng.common.net.DownloadingService"
+            android:process=":DownloadingService" >
+        </service>
+
+        <activity
+            android:name="com.umeng.update.UpdateDialogActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".wxapi.WXEntryActivity"
+            android:exported="true"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
