--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,7 +62,8 @@
         </activity>
         <activity
             android:name="com.canruoxingchen.uglypic.PhotoEditor"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"  >
         </activity>
         <activity
             android:name="com.canruoxingchen.uglypic.PublishActivity"
