--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:name="com.canruoxingchen.uglypic.SplashActivity"
             android:hardwareAccelerated="true"
             android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" 
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,6 +47,7 @@
             android:name="com.canruoxingchen.uglypic.CameraActivity"
             android:hardwareAccelerated="true"
             android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" 
             android:screenOrientation="portrait" >
         </activity>
         <activity
